recursion.logo.spiral.Spiral.scala.error
Compilation error:
Spiral:10: error: expected start of definition
	override def run() {
                 ^Spiral:14: error: Unmatched closing brace '}' ignored here
}
^